# c

./: .gitignore  README.md  TASK.md  pyproject.toml
.claude/: CLAUDE.md
c/: __init__.py  bootstrap.py  core.py  edf_cache.py  html_components.py  html_output.py  html_template.py  main.py  metrics.py  watch.py
old/: __init__.py  analyse.py
old/lib/: __init__.py  bootstrap.py  metrics.py  report.py  visualizations.py
old/outputs/exp2_halena_section_1_q1_20260102_142745_20260102_191118/: report.md
old/outputs/kelvins_rubric_on_live_data/: report.md
old/outputs/kelvins_rubric_on_mason_data/: report.md
old/outputs/kelvins_rubric_on_nathan/: report.md
old/outputs/outputs_20260102_165559/: report.md
old/outputs/outputs_20260102_170052/: report.md
old/outputs/outputs_20260102_170347/: report.md
old/outputs/outputs_20260102_170422/: report.md
old/outputs/outputs_20260102_170807/: report.md
