[project]
name = "c"
version = "0.3.0"
description = "CLI tool for analyzing EGF grading results against EDF ground truth"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edf",
    "egf",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "watchdog>=4.0",
]

[project.scripts]
c = "c.main:main"
compare = "c.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["c"]

[tool.uv.sources]
edf = { git = "https://github.com/Edexia/edf" }
egf = { git = "https://github.com/Edexia/egf" }
